--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -47,3 +47,5 @@
         <a class="fab fa-linkedin" href="https://www.linkedin.com/in/bastienhuber/"></a>
     </div>
 </nav>
+
+<div id="dark-panel"></div>
