--- a/templates/pages/blog.html.twig
+++ b/templates/pages/blog.html.twig
@@ -15,7 +15,7 @@
 
     <a href="articles/{{ featured.url }}">
         <header>
-            <img src="{{ asset('upload/' ~ featured.id ~ '/thumbnail.jpg') }}">
+            <img src="{{ asset('uploads/articles/' ~ featured.vignette) }}">
             <div class="article-info">
                 <h1>{{ featured.title }}</h1>
                 <h3>{{ featured.epigraphe }}</h3>
