--- a/templates/partials/tutoriel-thumbnail.html.twig
+++ b/templates/partials/tutoriel-thumbnail.html.twig
@@ -3,6 +3,6 @@
         <div>
             <h3>{{ tutoriel.title }}</h3>
         </div>
-        <img src=" {{ asset('upload/' ~ tutoriel.id ~ '/thumbnail.jpg') }}">
+        <img src="{{ asset('uploads/articles/' ~ tutoriel.vignette) }}">
     </div>
 </a>
