--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, h6, a, div, span, section, ul, ol, li {
+h1, h2, h3, h4, h5, h6, a, div, span, section, ul, ol, li, button {
   text-decoration: none;
   font-family: 'Roboto Light';
   font-weight: 100;
@@ -9,7 +9,7 @@ html, body {
 }
 
 .body {
-  min-height: 100vh;
+  min-height: calc(100vh - 350px);
 }
 
 strong {
