--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,7 @@
                     integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
                     crossorigin="anonymous"></script>
             <script src="{{ asset('build/js/nav.js') }}"></script>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         {% endblock %}
     </body>
 </html>
