--- a/templates/pages/blog.html.twig
+++ b/templates/pages/blog.html.twig
@@ -19,12 +19,7 @@
             <div class="article-info">
                 <h1>{{ featured.title }}</h1>
                 <h3>{{ featured.epigraphe }}</h3>
-                <div class="author">
-                    <img src="https://avatars0.githubusercontent.com/u/11649293?s=400&v=4">
-                    <div>
-                        <p><strong>Bastien Huber</strong></p>
-                        <p>Publié le {{ featured.date | date("m/d/Y") }}</p>
-                    </div>
+                <span>Publié le {{ featured.date | date("m/d/Y") }}</span>
                 </div>
             </div>
         </header>
@@ -36,4 +31,24 @@
         {% endfor %}
     </section>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script>window.twttr = (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+                t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
+
+            t._e = [];
+            t.ready = function(f) {
+                t._e.push(f);
+            };
+
+            return t;
+        }(document, "script", "twitter-wjs"));</script>
+    <script src="{{ asset('build/js/twitter_widgets.js') }}"></script>
 {% endblock %}
