--- a/assets/scss/admin-list.scss
+++ b/assets/scss/admin-list.scss
@@ -1,91 +1,5 @@
 @import "screen";
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  max-width: 972px;
-  margin: 24px auto;
-  -webkit-transition: all .2s ease-in;
-  -moz-transition: all .2s ease-in;
-  -ms-transition: all .2s ease-in;
-  -o-transition: all .2s ease-in;
-  transition: all .2s ease-in;
-
-  @include breakpoint-medium {
-    max-width: 648px;
-  }
-
-  @include breakpoint-small {
-    flex-direction: column;
-    max-width: 300px;
-
-    h1 {
-      font-size: 1.6rem;
-    }
-  }
-
-  > img {
-      height: 300px;
-      width: 50%;
-      object-fit: cover;
-
-    @include breakpoint-small {
-      height: 200px;
-      width: 100%;
-    }
-
-  }
-
-  .article-info{
-    width: 50%;
-    padding: 24px;
-
-
-    @include breakpoint-small {
-      width: 300px;
-    }
-  }
-  
-  &:hover {
-    -webkit-transform: scale(1.01);
-    -moz-transform: scale(1.01);
-    -ms-transform: scale(1.01);
-    -o-transform: scale(1.01);
-    transform: scale(1.01);
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
-    box-shadow: 0 0 5px 2px rgba(0,0,0,0.1);
-  }
-
-  h1 {
-    margin: 0;
-  }
-}
-
-.author {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  img {
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    object-fit: fill;
-    margin-right: 24px;
-  }
-
-  p {
-    margin: 0;
-    font-size: 0.9rem;
-  }
-}
-
 #articles {
   display: flex;
   flex-direction: row;
@@ -102,9 +16,83 @@ header {
   }
 }
 
-a {
-  color: black;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
+header {
+  width: 100%;
+  margin: 12px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  a {
+    padding: 6px 24px;
+    line-height: 25px;
+    margin: 6px;
+    border: none;
+    border-radius: 5px;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    color: #fff;
+    background-color: #43A047;
+
+    &:hover {
+      background-color: #2E7D32;
+      -webkit-transition: all .2s;
+      -moz-transition: all .2s;
+      -ms-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s;
+    }
+  }
+
+}
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style-type: none;
+  margin-bottom: 24px;
+
+  a {
+    height: 42px;
+    width: 42px;
+    border-radius: 50%;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transform: scale(1.1);
+      -webkit-transition: all .2s;
+      -moz-transition: all .2s;
+      -ms-transition: all .2s;
+      -o-transition: all .2s;
+      transition: all .2s;
+    }
+
+  }
+
+  .edit {
+    background-color: #1E88E5;
+    color: #fff;
+  }
+
+  .delete {
+    background-color: #F44336;
+    color: #fff;
+  }
 }
