--- a/assets/scss/article-thumbnail.scss
+++ b/assets/scss/article-thumbnail.scss
@@ -26,24 +26,8 @@
     height: 200px;
     padding: 12px;
 
-    .author-thumbnail {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      img {
-        border-radius: 50%;
-        height: 30px;
-        width: 30px;
-        object-fit: fill;
-        margin-right: 24px;
-      }
-
-      p {
-        margin: 0;
-        font-size: 0.8rem;
-      }
+    span {
+      font-size: 0.8rem;
     }
   }
 
