--- a/assets/scss/blog.scss
+++ b/assets/scss/blog.scss
@@ -41,9 +41,12 @@ header {
     width: 50%;
     padding: 24px;
 
-
     @include breakpoint-small {
-      width: 300px;
+      width: 252px;
+    }
+
+    span {
+      font-size: 0.9rem;
     }
   }
   
@@ -63,26 +66,6 @@ header {
 
   h1 {
     margin: 0;
-  }
-}
-
-.author {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  img {
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    object-fit: fill;
-    margin-right: 24px;
-  }
-
-  p {
-    margin: 0;
-    font-size: 0.9rem;
   }
 }
 
