--- a/templates/pages/article.html.twig
+++ b/templates/pages/article.html.twig
@@ -29,6 +29,9 @@
         <div class="content">
             <h1>{{ article.title }}</h1>
             <section class="markdown-body">{{ article.content | markdown }}</section>
+            <section class="meta">
+                Publié le {{ article.date | date("m/d/Y") }}
+            </section>
         </div>
 
     </div>
