--- a/templates/partials/article-thumbnail.html.twig
+++ b/templates/partials/article-thumbnail.html.twig
@@ -4,15 +4,7 @@
         <div class="article-thumbnail-info">
             <h3>{{ article.title }}</h3>
             <h4> {{ article.epigraphe }}</h4>
-            <div class="author-thumbnail">
-                <div class="image-cropper-thumbnail">
-                    <img src="https://avatars0.githubusercontent.com/u/11649293?s=400&v=4">
-                </div>
-                <div>
-                    <p><strong>Bastien Huber</strong></p>
-                    <p>Publié le {{ article.date | date("m/d/Y") }}</p>
-                </div>
-            </div>
+            <span>Publié le {{ article.date | date("m/d/Y") }}</span>
         </div>
     </div>
 </a>
