--- a/templates/partials/project-thumbnail.html.twig
+++ b/templates/partials/project-thumbnail.html.twig
@@ -1,5 +1,5 @@
 <div class="project-thumbnail">
-    <img src="{{ project.logoUrl }}">
+    <img src="{{ asset('uploads/projects/' ~ project.logo) }}">
     <h2>{{ project.title }}</h2>
     <p>{{ project.description }}</p>
 
