--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        {% block meta %}
+        {% endblock %}
+        <meta charset="utf-8">
         <title>{% block title %}Huberisation | Tech and stuff{% endblock %}</title>
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('build/css/base.css') }}">
@@ -24,8 +26,10 @@
             <script src="http://code.jquery.com/jquery-3.3.1.slim.min.js"
                     integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
                     crossorigin="anonymous"></script>
-            <script src="{{ asset('build/js/nav.js') }}"></script>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <script src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.4"></script>
+            <script src="{{ asset('build/js/nav.js') }}"></script>
+            <script src="{{ asset('build/js/emoji.js') }}"></script>
         {% endblock %}
     </body>
 </html>
