chore: update templates

--- a/assets/scss/accueil.scss
+++ b/assets/scss/accueil.scss
@@ -75,6 +75,7 @@ header {
         z-index: 0;
         position: relative;
         top: -350px;
+        object-fit: cover;
 
         @include breakpoint-x-small {
           width: 300px;
