--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -1,6 +1,6 @@
 h1, h2, h3, h4, h5, h6, a, div, span, section, ul, ol, li, button {
   text-decoration: none;
-  font-family: 'Roboto Light';
+  font-family: 'Roboto Light', 'Roboto', sans-serif;
   font-weight: 100;
 }
 
