--- a/templates/pages/tutoriels.html.twig
+++ b/templates/pages/tutoriels.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 
+{% block meta %}
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@bastien_hub">
+    <meta name="twitter:title" content="Tutoriels | Huberisation">
+{% endblock %}
+
+
 {% block title %}Tutoriels | Huberisation{% endblock %}
 
 {% block stylesheets %}
