--- a/templates/pages/blog.html.twig
+++ b/templates/pages/blog.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block meta %}
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@bastien_hub">
+    <meta name="twitter:title" content="Blog | Huberisation">
+{% endblock %}
+
 {% block title %}Blog | Huberisation{% endblock %}
 
 {% block stylesheets %}
