chore: change contact address

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,7 +1,7 @@
 <footer>
     <ul>
-        <li>© 2018 Bastien Huber</li>
-        <li><a href="mailto:bastienhub@gmail.com">Me contacter</a></li>
+        <li>© 2019 Bastien Huber</li>
+        <li><a href="mailto:bastien@huberisation.fr">Me contacter</a></li>
         <li><a href="/a-propos">A Propos</a></li>
     </ul>
 </footer>
