chore: refactor app security

--- a/assets/scss/admin-list.scss
+++ b/assets/scss/admin-list.scss
@@ -54,7 +54,7 @@ header {
   flex-direction: row;
   justify-content: space-evenly;
   list-style-type: none;
-  margin-bottom: 24px;
+  margin: 3em auto;
 
   a {
     height: 42px;
