--- a/templates/pages/a-propos.html.twig
+++ b/templates/pages/a-propos.html.twig
@@ -9,7 +9,7 @@
 {% block title %}A propos | Huberisation{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('build/css/a-propos.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/css/about.css') }}">
 {% endblock %}
 
 {% block nav %}
