--- a/templates/pages/article.html.twig
+++ b/templates/pages/article.html.twig
@@ -4,8 +4,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@bastien_hub">
     <meta name="twitter:title" content="{{ article.title }}">
-    {% if article.epigraphe %}
-        <meta name="twitter:description" content="{{ article.epigraphe }}">
+    {% if article.epigraph %}
+        <meta name="twitter:description" content="{{ article.epigraph }}">
     {% endif %}
     <meta name="twitter:image:src" content="{{ asset('https://huberisation.eu/uploads/articles/' ~ article.vignette) }}">
 {% endblock %}
