--- a/templates/partials/article-thumbnail.html.twig
+++ b/templates/partials/article-thumbnail.html.twig
@@ -3,7 +3,7 @@
         <img src="{{ asset('uploads/articles/' ~ article.vignette) }}">
         <div class="article-thumbnail-info">
             <h3>{{ article.title }}</h3>
-            <h4> {{ article.epigraphe }}</h4>
+            <h4> {{ article.epigraph }}</h4>
             <span>Publié le {{ article.date | date("m/d/Y") }}</span>
         </div>
     </div>
