--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,32 +11,33 @@
 {% endblock %}
 
 {% block body %}
+<div class="card center">
 
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <div class="card-header">Connexion</div>
 
-    <div class="card center">
+    <form method="post">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-        <div class="card-header">Connexion</div>
+        <label for="inputUsername" class="sr-only">Nom d'utilisateur</label>
+        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Nom d'utilisateur" required autofocus>
+        <label for="inputPassword" class="sr-only">Mot de passe</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
 
-        <form action="{{ path('login') }}" method="post">
-            <label for="username">Pseudo:</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
 
-            <label for="password">Mot de passe:</label>
-            <input type="password" id="password" name="_password" />
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Se souvenir de moi
+                </label>
+            </div>
 
-            {#
-                If you want to control the URL the user
-                is redirected to on success (more details below)
-                <input type="hidden" name="_target_path" value="/account" />
-            #}
-
-            <button type="submit">Connexion</button>
-        </form>
-    </div>
-
-
+        <button class="btn btn-lg btn-primary" type="submit">
+            Connexion
+        </button>
+    </form>
+</div>
 {% endblock %}
-
